Changes 1.0.0 Alpha
												25 Nov 2013
	*) Change：修改 IP 验证 flags 默认值为：0，即将原来的默认不允许为保留 IP，修改为默认允许为保留 IP
	*) Change：删除电话号码验证内部 API 和相关数据结构
	*) Change：调整 Validate::isBlank 内部 API
	*) Bugfix: 修正重启 Web Server 失败的 BUG
	*) Feature: 增加将任意一个数转化为绝对值的整数 API（Math::cplus）
	*) Feature: 增加指定范围内的随机数 API（Math::rand）
	*) Feature: 增加获取两个或两个以上正整数最小公倍数 API（Math::lcm）
	*) Feature: 增加获取两个或两个以上正整数最大公约数 API（Math::gcd）
	*) Feature: 增加生成 HTML 标签 Helper API（Helper\Html）
	*) Feature: 增加生成 Form 标签 Helper API（Helper\Form）

Changes 0.0.1 Release
												25 Nov 2013
	*) Bugfix: 删除 Buession::getInstance 内部 API 测试代码

Changes 0.0.1 Beta
												25 Nov 2013
	*) Bugfix: 修正 ISBN 验证效率

Changes 0.0.1 Alpha
												24 Nov 2013
	*) The first public version.
	*) Feature: 实现获取类类文件加载（Buession::loadClass）
	*) Feature: 实现获取类实例 API（Buession::getInstance）
	*) Feature: 实现 "Assert" API
	*) Feature: 实现注册表 API（Registry）
	*) Feature: 实现大部分数据验证 API（"Validate"）
	*) Feature: 定义通用异常（Exception）
	*) Feature: 定义通用常量
	*) Feature: 定义信用卡词典
	*) Feature: 定义域名后缀词典